objects/Room__c.object
<CustomObject>
    <description>Contains data about rooms available in hotel</description>
    <fields>
        <fullName>Double_Beds__c</fullName>
        <label>Double Beds</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this room an executive one</description>
        <label>Executive Room?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <description>Refers which hotel owns the room</description>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maximum_People_in_the_Room__c</fullName>
        <formula>Single_Beds__c  + (2 *  Double_Beds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum People in the Room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price_for_Night__c</fullName>
        <description>Price PER ONE PERSON</description>
        <label>Price for Night</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Single_Beds__c</fullName>
        <label>Single Beds</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>